Documentation edits made through Mintlify web editor

--- a/nxtcore-WLinhaltsverzeichnis.mdx
+++ b/nxtcore-WLinhaltsverzeichnis.mdx
@@ -83,3 +83,19 @@ mode: "wide"
 </Accordion>
 
 ### Admin-Oberfläche:
+
+<Accordion title="Dashboard" description='Erklärung von "Dashboard"' icon="sparkles">
+  
+</Accordion>
+
+<Accordion title="Accounts" description='Beschreibung aller Funktionen in der Rubrik "Accounts"' icon="sparkles">
+  Folgende Menüs werden der Reihenfolge nach erklärt:\
+  \
+  Avatar Dekorationen\
+  Badges\
+  Connections\
+  Teams\
+  User\
+  User Connection Banns\
+  User Connections
+</Accordion>
