Documentation edits made through Mintlify web editor

--- a/nxtcore-WLadmin.mdx
+++ b/nxtcore-WLadmin.mdx
@@ -135,7 +135,7 @@ description: "Beschreibung aller Funktionen in der Admin-Oberfläche."
   </AccordionGroup>
 </Accordion>
 
-<Accordion title="Berechtigung" description='Beschreibung aller Funktionen in der Rubrik "Admin"' icon="sparkles">
+<Accordion title="Admin" description='Beschreibung aller Funktionen in der Rubrik "Admin"' icon="sparkles">
   **Die Funktionen sind in die jeweiligen Menüs unterteilt.**
 
   <AccordionGroup>
