Documentation edits made through Mintlify web editor

--- a/nxtcore-WLadmin.mdx
+++ b/nxtcore-WLadmin.mdx
@@ -217,3 +217,62 @@ description: "Beschreibung aller Funktionen in der Admin-Oberfläche."
     </Accordion>
   </AccordionGroup>
 </Accordion>
+
+<Accordion title="Mails" description='Beschreibung aller Funktionen in der Rubrik "Mails"' icon="sparkles">
+  <Accordion title="Mail Templates" description="Beschreibung aller Funktionen in diesem Menü." icon="box-archive">
+    Mailtemplates können aktuell nur durch NxtCore erstellt werden.\
+    \
+    Für neue Mailtemplates bitte an NxtCore wenden.\
+    Die Einstellung hierfür ist sehr komplex.
+  </Accordion>
+</Accordion>
+
+<Accordion title="Turnier" description='Beschreibung aller Funktionen in der Rubrik "Turnier"' icon="sparkles">
+  **Die Funktionen sind in die jeweiligen Menüs unterteilt.**
+
+  <AccordionGroup>
+    <Accordion title="Games" description="Beschreibung aller Funktionen in diesem Menü." icon="gamepad">
+      In diesem Menü können "Spiele" angelegt werden, welche beim erstellen eines Turniers dann für das jeweilige Turnier ausgewählt werden können.
+
+      ![Spielerstellen Pn](/images/spielerstellen.png)
+
+      In diesem Menü kann
+
+      - ein Name vergeben werden
+      - ein Icon hochgeladen werden \
+        Bildformat 1:1
+      - bestimmt werden, welche Verlinkungen für dieses Spiel benötigt werden\
+        z.B. League of Legends = Riot Account\
+        \
+        Durch das Klicken auf die Schaltfläche "Erstellen" wird die Eingabe bestätigt.
+
+      Über das Icon <Icon icon="paintbrush-pencil" color="#ffffff" /> für "Spiel bearbeiten" kann das Spiel bearbeitet werden.
+
+      ![Spielbearbeiten Pn](/images/spielbearbeiten.png)
+
+      Über das Icon <Icon icon="trash" color="#ff0000" /> kann das Spiel gelöscht werden.\
+      Die Eingabe muss mit "Löschen" in einem Pop-Up bestätigt werden.
+
+      ![Spielloeschen Pn](/images/spielloeschen.png)
+    </Accordion>
+    <Accordion title="Regelwerke" description="Beschreibung aller Funktionen in diesem Menü." icon="notebook">
+      In diesem Menü können Regelwerke erstellt werden, welche im Anschluss in einem Turnier geladen werden können.\
+      \
+      Über die Schaltfläche "Erstellen" wird ein neues, leeres Regelwerk angelegt.\
+      Hier muss zunächst ein Name vergeben werden.\
+      \
+      Im Anschluss kann das Regelwerk über das Icon <Icon icon="paintbrush-pencil" color="#ffffff" /> mit einem Texteditor bearbeitet werden.\
+      \
+      Durch das Klicken auf das Icon <Icon icon="trash" color="#ff0000" /> kann das Regelwerk gelöscht werden.\
+      **ACHTUNG: Löschung erfolgt OHNE erneute Bestätigung.**
+    </Accordion>
+    <Accordion title="Turnier Serien" description="Beschreibung aller Funktionen in diesem Menü." icon="arrows-rotate-reverse">
+      In diesem Menü können Turnierserien angelegt werden.\
+      \
+      Turnierserien haben aktuell noch keine wirkliche Funktion.
+    </Accordion>
+    <Accordion title="Turniere" description="Beschreibung aller Funktionen in diesem Menü." icon="trophy">
+      In diesem Menü können Turniere angeleg, verwaltet, bearbeitet und gelöscht werden.
+    </Accordion>
+  </AccordionGroup>
+</Accordion>
